examples/failing/OverlappingArguments.purs
module OverlappingArguments where

f x x = x
